--- a/main.css
+++ b/main.css
@@ -1,37 +1,37 @@
 h1 {
-    font-size: ;
-    font-family: ;
-    padding: ;
-    margin: ;
-    font-weight: ;
-    text-decoration: ;
-    color: ;
-    background-color: ;
+    font-size: 45px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    margin: 12px;
+    font-weight: 500;
+    text-decoration: underline;
+    color: white;
+    background-color: black;
 }
 
 h2 {
-    font-size: ;
-    font-family: ;
-    padding: ;
-    margin: ;
-    font-weight: ;
-    color: ;
-    background-color: ;
+    font-size: 23px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    margin: 12px;
+    font-weight: 300;
+    color: rgb(240, 52, 52);
+    background-color: black ;
 }
 
 p {
-    font-family: ;
-    font-size: ;
-    padding: ;
-    margin: ;
-    color: ;
-    background-color: ;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    padding: 0px 18px;
+    margin: 4px;
+    color: rgb(31, 29, 29);
+    background-color: transparent;
 }
 
 .logo {
     background-size: cover;
-    background-image: url();
-    background-color: ;
-    height: ;
-    width: ;
+    background-image: url(./images/logo-emblem-black-1000.png);
+    background-color: rgb(31, 29, 29);
+    height: 200px;
+    width: 250px;
 }
